# django-debreach

./: .coverage  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  run_tests.sh  runtests.py  setup.cfg  setup.py  tox.ini
debreach/: __init__.py  apps.py  compat.py  context_processors.py  decorators.py  middleware.py  tests.py  utils.py
docs/: Makefile  conf.py  make.bat
test_project/: forms.py  settings.py  urls.py
test_project/templates/: home.html  test.html
