[metadata]
name = django-debreach
version = attr: debreach.__version__
description = Adds middleware to give some added protection against the BREACH attack in Django.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Luke Pomfrey
author_email = luke@lukepomfrey.org
maintainer = Luke Pomfrey
maintainer_email = luke@lukepomfrey.org
url = http://github.com/lpomfrey/django-debreach
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires = setuptools;wheel;pip
python_requires = >=3.9
tests_require = django

[options.packages.find]
exclude = 
    test_project
    docs

[flake8]
max-line-length = 88
ignore = E203, E501, W503

[pycodestyle]
max-line-length = 88
ignore = E203, E501, W503
